# TCTrack

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  README.md  pyproject.toml  tctrack_test.py
.github/workflows/: JOSS_paper_pdf.yml  codequality.yaml  release.yaml  unit-tests.yaml
docs/: conf.py  index.rst  references.rst
docs/api/: core_api.rst  index.rst  preprocessing_api.rst  tempest_extremes_api.rst  track_api.rst  tstorms_api.rst  utils_api.rst
docs/data/: index.rst  output_file.rst  preprocessing_data.rst
docs/developer/: adding_algorithms.rst  guidelines.rst  index.rst
docs/flowcharts/: FlowChart_MLTracker.mmd  FlowChart_TCT.mmd
docs/getting-started/: index.rst  tutorial.rst
docs/tracking-algorithms/: index.rst  tempest_extremes.rst  track.rst  tstorms.rst
paper/: paper.bib  paper.md
src/tctrack/: __init__.py  hello.py  preprocessing.py
src/tctrack/build_db/: README.md  __init__.py  build_db.py  schema.sql
src/tctrack/core/: __init__.py  core.py  ml_tracker.py  netcdf.py  test_run.py  tracker.py  tracker_template.py  trajectory.py
src/tctrack/machine_learning/: __init__.py  cyclone_track_ml.py  machine_learning.py
src/tctrack/tempest_extremes/: __init__.py  tempest_extremes.py
src/tctrack/track/: __init__.py  track.py
src/tctrack/tstorms/: __init__.py  tstorms.py
src/tctrack/utils/: __init__.py  batching.py  metadata.py  netcdf.py  preprocessing.py
tests/: conftest.py
tests/integration/: test_tracker_integration.py
tests/unit/: test_core.py  test_tempest_extremes.py
tests/unit/build_db/: test_build_db.py  test_tracks.nc  test_tracks_se.nc
tests/unit/core/: test_core.py  test_netcdf.py  test_tracker.py  test_trajectory.py
tests/unit/machine_learning/: test_machine_learning.py
tests/unit/preprocessing/: test_preprocessing.py
tests/unit/tempest_extremes/: test_tempest_extremes.py
tests/unit/track/: test_track.py
tests/unit/tstorms/: test_tstorms.py
tests/unit/utils/: test_metadata.py  test_netcdf.py  test_preprocessing.py
tutorial/: README.md  data_processed  fetch_data.sh  install_tempest_extremes.sh  install_tstorms.sh  plot_tracks.py  preprocess_data.py  regrid.py  run_tempest_extremes.py  run_tstorms.py
