[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "tctrack"
version = "0.1.0"
description = "A Python package for generating tropical cyclone tracks."
keywords = ["meteorology", "weather", "tropical cyclone", "tracking"]
authors = [
  { name="Jack Atkinson", email="jwa34@cam.ac.uk" },
  { name="Sam Avis", email="sa2329@cam.ac.uk" },
]
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Natural Language :: English",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Typing :: Typed',
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "Intended Audience :: Science/Research",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/Cambridge-ICCS/TCTrack"
"Repository" = "https://github.com/Cambridge-ICCS/TCTrack"
"Issues" = "https://github.com/Cambridge-ICCS/TCTrack/issues"

